--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ aiocache = "^0.11.1"
 aiopg = "^1.3.4"
 psycopg2-binary = "^2.9.3"
 python-dotenv = "^0.21.0"
+sqlalchemy = "1.4.41"
+databases = "0.6.2"
+asyncio = "3.4.3"
+asyncpg = "0.27.0"
 
 [tool.poetry.dev-dependencies]
 
