--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,13 @@
-# Django
-SECRET_KEY=django-insecure-^b)2e05svy3dsfasewf2f2fw(2$4$=k&o3*=6d%kq73
-ALLOWED_HOSTS=["*"]
-DEBUG=True
-STATIC_VOLUME=/static_value
-MEDIA_VOLUME=/media_value
-DRF_RECAPTCHA_SECRET_KEY=...
-RECAPTCHA_PUBLIC_KEY=...
-
-# API
+# Server
+API_SERVER_PORT=...
 X_API_TOKEN=...
+API_TRUSTED_HOST=...
 
 # PostgresSQL
-POSTGRES_HOST=...
-POSTGRES_PORT=...
+POSTGRES_DATABASE_NAME=...
 POSTGRES_USER=...
 POSTGRES_PASSWORD=...
-POSTGRES_DATABASE_NAME=...
-
-# Yookassa
-ACCOUNT_ID=...
-SECRET_KEY=...
-
-DJANGO_SUPERUSER_PASSWORD=...
-DJANGO_SUPERUSER_EMAIL=admin@bank.com
-DJANGO_SUPERUSER_USERNAME=...
-
-# Redis
-CELERY_BROKER_URL=...
-CELERY_RESULT_BACKEND=...
+POSTGRES_HOST=...
+POSTGRES_PORT=...
+POSTGRES_DATA_VOLUME=...
+ 
